--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/image/brandLogo/ayatLogo.png" />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="description" content="Test your Quran knowledge with Ayat Quiz - fun and educational!" />
+    <meta name="keywords" content="Quran, Ayat Quiz, Islamic Quiz, Education, Quiz Game, Islamic Education, Quran Quiz, AyatQuiz, ayatquiz, Quiz Ayat, quizayat" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="AyatQuiz Team" />
     <title>Ayat Quiz</title>
   </head>
   <body>
